# htmlsight

./: .gitignore  CLAUDE.md  README.md  htmlsight_colab.ipynb  pyproject.toml
docs/: PDR-dataset-real-playwright-dom.md  training-report.md
docs/superpowers/plans/: 2026-05-11-ia-visao-web-implementation.md
docs/superpowers/specs/: 2026-05-11-ia-visao-web-design.md
scripts/: install-deps.sh  train-nightly.sh
scripts/ralph/: CLAUDE.md  prd.json  progress.txt
src/ia_visao_web/: __init__.py  cli.py
src/ia_visao_web/dataset/: __init__.py  splits.py  validator.py  writer.py
src/ia_visao_web/eval/: __init__.py  evaluator.py  metrics.py  predict.py  report.py
src/ia_visao_web/labeler/: __init__.py  dom_walker.py  geometry.py  selectors.py  walker.py
src/ia_visao_web/model/: __init__.py  dataset_loader.py  heads.py  loss.py  train.py  vocab.py
src/ia_visao_web/renderer/: __init__.py  playwright_renderer.py
src/ia_visao_web/sources/: __init__.py  fetch_bootstrap_docs.py  generator.py
tests/integration/: test_dataset_build_cli.py  test_full_pipeline.py  test_playwright_dataset_build.py
tests/unit/: test_cli.py
tests/unit/dataset/: test_splits.py  test_validator.py  test_writer.py
tests/unit/eval/: test_evaluator.py  test_metrics.py  test_predict.py  test_report.py
tests/unit/labeler/: test_dom_walker.py  test_geometry.py  test_selectors.py  test_walker.py
tests/unit/model/: test_dataset_loader.py  test_heads.py  test_loss.py  test_train.py  test_vocab.py
tests/unit/renderer/: test_playwright_renderer.py
tests/unit/sources/: test_generator.py  (+1 more)
